unpackaged/main/default/objects/User/fields/Manager_Level_Override__c.field-meta.xml
<CustomField>
    <fullName>Manager_Level_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used for formulas and validation rules to allow for the ability to override them.  This has to be included in any of the language in order to be used properly.</description>
    <inlineHelpText>Manager Level rights to Override rules.</inlineHelpText>
    <label>Manager Level Override</label>
    <type>Checkbox</type>
</CustomField>