unpackaged/main/default/objects/User/fields/Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Restrictions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to define restrictions people should have on specific objects through validation rules.  Allows us to target specific bad actors or scenarios inside of validation rules.</description>
    <inlineHelpText>Enable restrictions on objects that use this in validation rules.</inlineHelpText>
    <label>Restrictions</label>
    <type>Checkbox</type>
</CustomField>